Added configure maven settings for central token auth

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -30,4 +30,5 @@ pipelines:
         deployment: Production
         trigger: manual 
         script:
+          - bash configure-maven.sh
           - mvn -B deploy --file pom.xml        
