Activate release profile on deployment CI

--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
   <profiles>
     <profile>
       <id>release</id>
+      <activation>
+        <property>
+          <name>env.BITBUCKET_DEPLOYMENT_ENVIRONMENT</name>
+        </property>
+      </activation>
       <build>
         <plugins>
           <plugin>
