Set env vars for gpg key

--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,8 @@
             </executions>
             <configuration>
               <signer>bc</signer>
+              <keyEnvName>MAVEN_GPG_KEY</keyEnvName>
+              <passphraseEnvName>MAVEN_GPG_PASSPHRASE</passphraseEnvName>
             </configuration>
           </plugin>
         </plugins>
