--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,11 @@
                 </goals>
               </execution>
             </executions>
+            <configuration>
+              <signer>bc</signer>
+              <keyEnvName>MAVEN_GPG_KEY</keyEnvName>
+              <passphraseEnvName>MAVEN_GPG_PASSPHRASE</passphraseEnvName>
+            </configuration>
           </plugin>
         </plugins>
       </build>
