--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,6 +16,9 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
+      - if: github.event.release
+        name: Update version in pom.xml (Release only)
+        run: mvn -B versions:set -DnewVersion=${{ github.event.release.tag_name }} -DgenerateBackupPoms=false
       - name: Publish to the Maven Central Repository
         run: |
           echo ${MAVEN_GPG_KEY} > private_key.txt
