--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -21,10 +21,7 @@ jobs:
         run: mvn -B versions:set -DnewVersion=${{ github.event.release.tag_name }} -DgenerateBackupPoms=false
       - name: Publish to the Maven Central Repository
         run: |
-          echo ${MAVEN_GPG_KEY} > private_key.txt
-          head -n 1 private_key.txt
-          echo ${TEST_ME}
-          wc -l private_key.txt
+          echo "${MAVEN_GPG_KEY}" > private_key.txt
           gpg --import --batch private_key.txt
           mvn --batch-mode -P release -P release-to-central deploy
         env:
