--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -26,17 +26,17 @@ jobs:
              }]
       - if: github.event.release
         name: Update version in pom.xml (Release only)
-        run: mvn -B versions:set -DnewVersion=${{ github.event.release.tag_name }} -DgenerateBackupPoms=false
+        run: ./mvnw -B versions:set -DnewVersion=${{ github.event.release.tag_name }} -DgenerateBackupPoms=false
       - name: Publish to the Maven Central Repository
         run: |
           echo "${MAVEN_GPG_KEY}" > private_key.txt
           gpg --import --batch private_key.txt
-          mvn --batch-mode -P release -P release-to-central deploy
+          ./mvnw --batch-mode -P release -P release-to-central deploy
         env:
           MAVEN_GPG_KEY: ${{ secrets.MAVEN_GPG_KEY }}
           MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
           TEST_ME: $${{ vars.MAVEN_GPG_TEST }}
       - name: Publish to GitHub Packages
-        run: mvn --batch-mode -P release -P release-to-github deploy
+        run: ./mvnw --batch-mode -P release -P release-to-github deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
