--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>nl.group9</groupId>
   <artifactId>firestore-unit</artifactId>
-  <version>0.0.3</version>
+  <version>0.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>firestore-unit</name>
